--- a/index.html
+++ b/index.html
@@ -11,50 +11,40 @@
 
 <body>
 	
- <!--
-	 <h1>Stack35</h1> -->
-	
  <div class="cadre">
    
   <div class="a" id="aresults">result</div>
-  <div class="a" id="ainput">inpu</div> 
+  <input type="text" id="ainput" name='ainput'></input> 
   <div class="a" id="ainfo">info</div>
 
+  <button class="bblanc" id="b8">&#5123;</button>
+
+  <button class="bblanc" id="bac">x</button>
+  <button class="bgris" id="bdup">STOP</button>
+  <button class="bgris" id="bsto">x</button>
+  <button class="bbleu" id="bminu">x</button>
   
+  <button class="bblanc" id="b4">&#5130;</button>
+  <button class="bblanc" id="b5">ROT</button>
+  <button class="bblanc" id="b6">&#5125;</button>
+  <button class="bblanc" id="bc">x</button>
+  <button class="bgris" id="bcstk">x</button>
+  <button class="bgris" id="bswap">GO</button>
+  <button class="bbleu" id="bplus">x</button>
+ 
+  <button class="bblanc" id="b2">&#5121;</button>
+
+  <button class="bblanc" id="bmoins">x</button>
+  <button class="bgris" id="bdrop">x</button>
+  <button class="bgris" id="brcl">x</button>
+  <button class="bbleu" id="bmul">x</button> 
   
-	
-  
-  
-  <button class="bblanc" id="b7">7</button>
-  <button class="bblanc" id="b8">8</button>
-  <button class="bblanc" id="b9">9</button>
-  <button class="bblanc" id="bac">AC</button>
-  <button class="bgris" id="bdup">DUP</button>
-  <button class="bgris" id="bsto">STO</button>
-  <button class="bbleu" id="bminu">MINU</button>
-  
-  <button class="bblanc" id="b4">4</button>
-  <button class="bblanc" id="b5">5</button>
-  <button class="bblanc" id="b6">6</button>
-  <button class="bblanc" id="bc">C</button>
-  <button class="bgris" id="bcstk">CSTK</button>
-  <button class="bgris" id="bswap">SWAP</button>
-  <button class="bbleu" id="bplus">PLUS</button>
-  
-  <button class="bblanc" id="b1">1</button>
-  <button class="bblanc" id="b2">2</button>
-  <button class="bblanc" id="b3">3</button>
-  <button class="bblanc" id="bmoins">-</button>
-  <button class="bgris" id="bdrop">DROP</button>
-  <button class="bgris" id="brcl">RCL</button>
-  <button class="bbleu" id="bmul">MUL</button> 
-  
-  <button class="bblanc" id="b0">0</button>
-  <button class="bblanc" id="bpoint">.</button>
-  <button class="bblanc" id="be">E</button>
-  <button class="bgris" id="benter">ENTER</button>
-  <button class="bgris" id="bpi">PI</button>
-  <button class="bbleu" id="bdiv">DIV</button> 
+  <button class="bblanc" id="b0">x</button>
+  <button class="bblanc" id="bpoint">x</button>
+  <button class="bblanc" id="be">x</button>
+  <button class="bgris" id="benter">x</button>
+  <button class="bgris" id="bpi">x</button>
+  <button class="bbleu" id="bdiv">x</button> 
  
  </div>
 
