--- a/index.html
+++ b/index.html
@@ -1,53 +1,12 @@
 <!-- <!DOCTYPE html> -->
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <title>Grid</title>
-	<meta name="viewport" content="width=650">
-	<link href="styles.css" rel="stylesheet">
-	<script src="script.js" defer ></script>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+<meta http-equiv="refresh" content="0; url=index04.html" />
+<title>Redirection html</title>
+<meta name="robots" content="noindex,follow" />
 </head>
-
 <body>
-	
- <div class="cadre">
-   
-  <div class="a" id="aresults">result</div>
-  <input type="text" id="ainput" name='ainput'></input> 
-  <div class="a" id="ainfo">info</div>
-
-  <button class="bblanc" id="b8">&#5123;</button>
-
-  <button class="bblanc" id="bac">x</button>
-  <button class="bgris" id="bdup">STOP</button>
-  <button class="bgris" id="bsto">x</button>
-  <button class="bbleu" id="bminu">x</button>
-  
-  <button class="bblanc" id="b4">&#5130;</button>
-  <button class="bblanc" id="b5">ROT</button>
-  <button class="bblanc" id="b6">&#5125;</button>
-  <button class="bblanc" id="bc">x</button>
-  <button class="bgris" id="bcstk">x</button>
-  <button class="bgris" id="bswap">GO</button>
-  <button class="bbleu" id="bplus">x</button>
- 
-  <button class="bblanc" id="b2">&#5121;</button>
-
-  <button class="bblanc" id="bmoins">x</button>
-  <button class="bgris" id="bdrop">x</button>
-  <button class="bgris" id="brcl">x</button>
-  <button class="bbleu" id="bmul">x</button> 
-  
-  <button class="bblanc" id="b0">x</button>
-  <button class="bblanc" id="bpoint">x</button>
-  <button class="bblanc" id="be">x</button>
-  <button class="bgris" id="benter">x</button>
-  <button class="bgris" id="bpi">x</button>
-  <button class="bbleu" id="bdiv">x</button> 
- 
- </div>
-
+redirection
 </body>
-
 </html>
