--- a/index06.html
+++ b/index06.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+ <!-- <!DOCTYPE html> -->
 <html>
 
 <head>
@@ -15,7 +15,7 @@
    
   <div class="a" id="aresults">result</div>
   <div class="a" id="ainter">interaction</div>
-  <input type="text" id="ainput" name='ainput'></input> 
+  <div class='a' id="ainput"></div> 
   
   <div class="a" id="ainfo">info</div>
 
@@ -25,13 +25,17 @@
   <button class="bbleu" id="bstop">STOP</button>
   
   <button class="bblanc" id="bouest">&#5130;</button>
+  <!--
   <button class="bblanc" id="brot">ROT</button>
+   -->
   <button class="bblanc" id="best">&#5125;</button>
   <button class="bgris" id="bmove">MOVE</button>
   <button class="bbleu" id="bgo">GO</button>
-  <button class="bgris" id="bana">ANA</button>
+
   <button class="bgris" id="benter">ENTER</button>
-  <button class="bgris" id="binit">INIT</button>
+  <button class="bgris" id="bclear">CLEAR</button>
+  <button class="bbleu" id="bvitmoins">VIT-</button>
+  <button class="bbleu" id="bvitplus">VIT+</button>
   <button class="bblanc" id="bsud">&#5121;</button>
 
   
